--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,6 +36,18 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+
+  listener:
+    build: ./listener
+    tty: true
+    volumes:
+      - ./listener:/app
+    restart: always
+    ports:
+      - 5050:5050
+    deploy:
+      mode: replicated
+      replicas: 1
   
   postgres:
     image: 'postgres:14.2'
@@ -51,3 +63,13 @@ services:
       - POSTGRES_DB=users
     volumes:
       - ./db-data/postgres/:/var/lib/postgresql/data/
+
+  rabbitmq:
+    image: 'rabbitmq:3.9-alpine'
+    ports:
+      - "5672:5672"
+    deploy:
+      mode: replicated
+      replicas: 1
+    volumes:
+     - ./db-data/rabbitmq/:/var/lib/rabbitmq/
